Bug 1978887 - Set pinned tabs container max width and allow overflow scroll r=tabbrowser-reviewers,desktop-theme-reviewers,dao
- Set max width to 80% of tabbrowser to allow regular tabs to still be visible
- Scroll pinned tabs overflow

Differential Revision: https://phabricator.services.mozilla.com/D258586

UltraBlame original commit: 8c5dc7e8dd64339e14b48bc6c37bdfb57a3143da

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -8781,13 +8781,11 @@ horizontal
 "
 ]
 {
-margin
+max
 -
-inline
--
-end
+width
 :
-12px
+60vw
 ;
 &
 :
@@ -10270,6 +10268,29 @@ color
 pale
 )
 )
+;
+/
+*
+Override
+xul
+.
+css
+we
+'
+re
+using
+the
+collapsed
+attribute
+for
+our
+own
+purposes
+*
+/
+visibility
+:
+inherit
 ;
 }
 }
@@ -12659,6 +12680,12 @@ Overflow
 tabbrowser
 -
 arrowscrollbox
+#
+pinned
+-
+tabs
+-
+container
 {
 &
 [
@@ -12669,27 +12696,6 @@ horizontal
 "
 ]
 {
-min
--
-width
-:
-1px
-;
-&
-:
-:
-part
-(
-scrollbox
-)
-{
-contain
-:
-inline
--
-size
-;
-}
 &
 :
 not
@@ -13119,70 +13125,6 @@ block
 ;
 }
 }
-&
-[
-scrolledtostart
-]
-:
-:
-part
-(
-overflow
--
-start
--
-indicator
-)
-&
-[
-scrolledtoend
-]
-:
-:
-part
-(
-overflow
--
-end
--
-indicator
-)
-{
-opacity
-:
-0
-;
-}
-&
-:
-:
-part
-(
-overflow
--
-start
--
-indicator
-)
-&
-:
-:
-part
-(
-overflow
--
-end
--
-indicator
-)
-{
-transition
-:
-opacity
-150ms
-ease
-;
-}
 /
 *
 Scroll
@@ -13262,25 +13204,6 @@ fill
 margin
 :
 0
-;
-padding
-:
-0
-calc
-(
-var
-(
--
--
-toolbarbutton
--
-inner
--
-padding
-)
--
-6px
-)
 ;
 }
 #
@@ -13457,6 +13380,104 @@ background
 color
 :
 inherit
+;
+}
+&
+[
+scrolledtostart
+]
+:
+:
+part
+(
+overflow
+-
+start
+-
+indicator
+)
+&
+[
+scrolledtoend
+]
+:
+:
+part
+(
+overflow
+-
+end
+-
+indicator
+)
+{
+opacity
+:
+0
+;
+}
+&
+:
+:
+part
+(
+overflow
+-
+start
+-
+indicator
+)
+&
+:
+:
+part
+(
+overflow
+-
+end
+-
+indicator
+)
+{
+transition
+:
+opacity
+150ms
+ease
+;
+}
+}
+#
+tabbrowser
+-
+arrowscrollbox
+[
+orient
+=
+"
+horizontal
+"
+]
+{
+min
+-
+width
+:
+20vw
+;
+&
+:
+:
+part
+(
+scrollbox
+)
+{
+contain
+:
+inline
+-
+size
 ;
 }
 }
@@ -14187,160 +14208,6 @@ overflow
 y
 :
 auto
-;
-}
-&
-:
-not
-(
-[
-scrolledtostart
-]
-)
-:
-:
-part
-(
-overflow
--
-start
--
-indicator
-)
-&
-:
-not
-(
-[
-scrolledtoend
-]
-)
-:
-:
-part
-(
-overflow
--
-end
--
-indicator
-)
-{
-background
--
-image
-:
-linear
--
-gradient
-(
-to
-top
-transparent
-0
-%
-light
--
-dark
-(
-rgba
-(
-0
-0
-0
-0
-.
-05
-)
-rgba
-(
-255
-255
-255
-0
-.
-05
-)
-)
-)
-;
-background
--
-repeat
-:
-no
--
-repeat
-;
-pointer
--
-events
-:
-none
-;
-position
-:
-relative
-;
-height
-:
-16px
-;
-z
--
-index
-:
-1
-;
-}
-&
-:
-:
-part
-(
-overflow
--
-start
--
-indicator
-)
-{
-margin
--
-block
-:
-0
--
-16px
-;
-}
-&
-:
-:
-part
-(
-overflow
--
-end
--
-indicator
-)
-{
-transform
-:
-scaleY
-(
--
-1
-)
-;
-margin
--
-block
-:
--
-16px
-0
 ;
 }
 .
